--- a/Swift_Pensamentos/Views/Base.lproj/Main.storyboard
+++ b/Swift_Pensamentos/Views/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -89,7 +90,9 @@
                             <constraint firstItem="LcC-Pt-53y" firstAttribute="trailing" secondItem="LO9-KW-R3n" secondAttribute="trailing" id="ru7-Yk-YQJ"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Pensamentos" image="quote.bubble" catalog="system" id="qBb-UX-TjO"/>
+                    <tabBarItem key="tabBarItem" title="Pensamentos" id="qBb-UX-TjO">
+                        <imageReference key="image" image="quotes" symbolScale="default" renderingMode="template"/>
+                    </tabBarItem>
                     <connections>
                         <outlet property="imageViewPhoto" destination="LO9-KW-R3n" id="tSO-1r-v68"/>
                         <outlet property="imageViewPhotoBg" destination="LcC-Pt-53y" id="Zr2-At-1xr"/>
@@ -174,6 +177,7 @@
                                     <segment title="Claro"/>
                                     <segment title="Escuro"/>
                                 </segments>
+                                <color key="tintColor" red="0.75294117650000003" green="0.37647058820000001" blue="0.19215686269999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
                                     <action selector="changeColorScheme:" destination="IJA-G6-miL" eventType="valueChanged" id="GGJ-Gv-W3v"/>
                                 </connections>
@@ -237,7 +241,7 @@
             <objects>
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Elg-rM-Vn0" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <tabBar key="tabBar" alpha="0.75" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="qOg-hT-y7W">
+                    <tabBar key="tabBar" alpha="0.90000000000000002" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="qOg-hT-y7W">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -254,7 +258,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="quote.bubble" catalog="system" width="128" height="110"/>
+        <image name="quotes" width="22" height="22"/>
         <image name="settings" width="22" height="22"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
